fix the line alignment for comments

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -648,7 +648,7 @@ input {
   /*position: relative;*/
   float: left;
   display:inline;
-  width: 315px;
+  width: 215px;
   height: 70px;
   padding: 0px;
   background: slategrey;
@@ -662,6 +662,36 @@ input {
 
 }
 
+.bubble p {
+  margin: 0;
+  line-height: 70px;
+}
+
+.bubble-long p {
+    text-align: center;
+    position: relative;
+    top: 30%;
+    -ms-transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.bubble-long {
+  /*position: relative;*/
+  float: left;
+  display:inline;
+  width: 355px;
+  height: 70px;
+  padding: 0px;
+  background: slategrey;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  margin-right: 15px;
+  margin-bottom: 20px;
+  padding: 10px;
+  text-align: center;
+}
 
 /*------------profile: rate form ------------*/
 
